Added functions and style

--- a/index.html
+++ b/index.html
@@ -7,19 +7,42 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/index.css">
 
         <script src="scripts/index.js"></script>
+        <script src="scripts/services/weather-service.js"></script>
     </head>
 
     <body>
         <main class="m-4">
-            <h2>Weather Forecast</h2>
+            <h2 class="text-center">Weather Forecast</h2>
 
-            <div class="mt-3 form-group">
-                <label for="citySelect" class="form-label">Select a city: </label>
+            <div class="m-5 form-group row">
+                <label for="citySelect" class="form-label col-2 pt-1">Select a city: </label>
                 <select name="citySelect" id="citySelect" class="form-select" style="width: 50%;">
                     <option value="0"></option>
                 </select>
+            </div>
+
+            <div id="resultSection" class="m-4 text-center">
+                <table class="table table-striped table-bordered p-3" id="resultTable">
+                    <!-- <tr class="text-center fw-medium">
+                        <td></td>
+                        <td colspan="2">Temperature</td>
+                        
+                        <td colspan="2">Wind</td>
+                        
+                        <td></td>
+                    </tr>
+                    <tr class="text-center fw-medium">
+                        <td>Time of the Day</td>
+                        <td>Temp</td>
+                        <td>Unit</td>
+                        <td>Direction</td>
+                        <td>Speed</td>
+                        <td>Short Forecast</td>
+                    </tr> -->
+                </table>
             </div>
         </main>
 
